--- a/src/styles/Day.scss
+++ b/src/styles/Day.scss
@@ -24,7 +24,7 @@
   }
 
   &-details {
-    background-color: rgba(245, 245, 245, 0.85);
+    background-color: rgba(245, 245, 245, 0.87);
     border-radius: 3px;
     transition: opacity 150ms linear;
     opacity: 0;
@@ -33,15 +33,15 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 12px;
+    font-size: 15px;
 
     &-day {
       position: absolute;
-      top: 2px;
-      left: 2px;
+      top: 3px;
+      left: 3px;
       font-family: 'Ubuntu Mono';
       font-weight: bold;
-      font-size: 15px;
+      font-size: 20px;
       color: $color-pink-dark;
     }
 
@@ -54,7 +54,7 @@
     &-type {
       position: absolute;
       bottom: 2px;
-      right: 4px;
+      right: 5px;
     }
   }
 
